--- a/.env
+++ b/.env
@@ -38,4 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://bot.love.test:rootR00T@smtp.gmail.com:465
 ###< symfony/mailer ###
