--- a/.env
+++ b/.env
@@ -38,5 +38,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
-MAILER_DSN=smtp://bot.love.test:rootR00T@smtp.gmail.com:465
+MAILER_DSN=gmail+smtp://bot.love.test:bfsusaurovmlnjch@default
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
